# MPI_labs

./: README.md
labs/: Makefile  (+2 more)
task/: CMakeLists.txt  Makefile  main.cpp  matrix.cpp  matrix.h  mpi_scope.cpp  mpi_scope.h  mpi_trace.c  mpi_trace.cpp  mpi_trace.h  runjobs.sh  small.job  utils.cpp  utils.h
task/jobs/: mpi-tv_small.job  mpi_10.job  mpi_10_100.job  mpi_10_1000.job  mpi_10_200.job  mpi_10_300.job  mpi_10_400.job  mpi_10_500.job  mpi_10_600.job  mpi_10_700.job  mpi_10_800.job  mpi_10_900.job  mpi_4.job  mpi_5.job  mpi_6.job  mpi_7.job  mpi_8.job  mpi_9.job  mpi_omp_10.job  mpi_omp_10_1000.job  mpi_omp_10_500.job  mpi_omp_10_600.job  mpi_omp_10_700.job  mpi_omp_10_800.job  mpi_omp_10_900.job  mpi_omp_4.job  mpi_omp_5.job  mpi_omp_6.job  mpi_omp_7.job  mpi_omp_8.job  mpi_omp_9.job  mpi_omp_small.job  mpi_small.job  plain_small.job
task/results/: plot.py
task/results/mpi-tv/: ppch_mpi-tv.79561.stdout
task/results/mpi/by_node/: 10.ppch_mpi.79541.stdout  4.ppch_mpi.79542.stdout  5.ppch_mpi.79543.stdout  6.ppch_mpi.79544.stdout  7.ppch_mpi.79545.stdout  8.ppch_mpi.79546.stdout  9.ppch_mpi.79547.stdout
task/results/mpi/by_size/: 10.ppch_mpi_1000.79535.stdout  10.ppch_mpi_500.79536.stdout  10.ppch_mpi_600.79537.stdout  10.ppch_mpi_700.79538.stdout  10.ppch_mpi_800.79539.stdout  10.ppch_mpi_900.79540.stdout
task/results/mpi_by_nodes/: 10.ppch_mpi.79518.stdout  4.ppch_mpi.79512.stdout  5.ppch_mpi.79513.stdout  6.ppch_mpi.79514.stdout  7.ppch_mpi.79515.stdout  8.ppch_mpi.79516.stdout  9.ppch_mpi.79517.stdout
task/results/plain/: ppch_plain.79562.stdout
(+24 files in other folders)
